# KEEPER

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  collision.h  djd.pro  game.h  setup.sh  template.html  vector2d.cpp  vector2d.h
.github/workflows/: build.yml  test-workflow.yml
assets/: tile_base.kra  tile_sand.kra  tile_water.png-autosave.kra  tile_water.png.kra  tile_water.png~
ecs/: components.h  systems.h
enc_temp_folder/42ecae1e44e9c5e96fc513ec0d46bbf/: components.h
res/psd/: char.psd
src/: animation.h  collision.cpp  collision.h  djd.pro  game.cpp  game.h  main.cpp  map.cpp  map.h  threadpool.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h
src/ecs/: animationsystem.cpp  animationsystem.h  components.h  controllersystem.cpp  controllersystem.h  ecs.h  rendersystem.cpp  rendersystem.h  systems.h
src/math/: float2.cpp  float2.h  float3.cpp  float3.h  int2.cpp  int2.h
